--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('./vendor/normalize.css');
 @import url('./vendor/fonts.css');
+@import url('./vendor/__variables.scss');
 
 #root {
   font-family: 'Roboto', 'Arial', sans-serif;
