--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,6 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   max-width: 1280px;
+  max-height: 100vh;
+  margin: 0 auto;
 }
