feat: promo core structure

--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -3,6 +3,9 @@
   max-height: 720px;
   position: relative;
   background-image: url('../../images/main-background.png');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 
   &__video {
     width: 100%;
