--- a/src/components/ApplicationForm/ApplicationForm.module.scss
+++ b/src/components/ApplicationForm/ApplicationForm.module.scss
@@ -20,6 +20,20 @@
     gap: 13px;
   }
 
+  &__phoneInput {
+    max-width: 284px;
+    border: none;
+    padding: 0;
+    font: var(--font-p-32-100-700);
+    letter-spacing: 0.05rem;
+    text-align: center;
+    background-color: var(--light-blue);
+
+    &:focus {
+      outline: none;
+    }
+  }
+
   &__phoneLabel {
     font: var(--font-p-26-100-400);
     text-align: center;
