feat: pause video when leaving banner page

--- a/src/pages/MainPage/MainPage.module.scss
+++ b/src/pages/MainPage/MainPage.module.scss
@@ -2,10 +2,10 @@
   max-width: 1280px;
   max-height: 720px;
   position: relative;
-  background-image: url('../../images/main-background.png');
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
+  // background-image: url('../../images/main-background.png');
+  // background-size: contain;
+  // background-position: center;
+  // background-repeat: no-repeat;
 
   &__video {
     width: 100%;
